data/forge_javadoc/1.12.2/raw/net/minecraft/client/gui/inventory/GuiContainerCreative.md
---
title: "GuiContainerCreative"
description: "public class GuiContainerCreative extends InventoryEffectRenderer"
package: "net/minecraft/client/gui/inventory"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/client/gui/inventory/GuiContainerCreative.html"
sourceType: javadoc
---

# GuiContainerCreative

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.renderer.InventoryEffectRenderer → net.minecraft.client.gui.inventory.GuiContainerCreative

## Class signature

```java
public class GuiContainerCreative extends InventoryEffectRenderer
```

## Methods

- `protected void actionPerformed(GuiButton button)`
- `protected void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY)`
- `protected void drawGuiContainerForegroundLayer(int mouseX, int mouseY)`
- `void drawScreen(int mouseX, int mouseY, float partialTicks)`
- `protected void drawTab(CreativeTabs tab)`
- `int getSelectedTabIndex()`
- `static void handleHotbarSnapshots(Minecraft p_192044_0_, int p_192044_1_, boolean p_192044_2_, boolean p_192044_3_)`
- `protected void handleMouseClick(Slot slotIn, int slotId, int mouseButton, ClickType type)`
- `void handleMouseInput()`
- `void initGui()`
- `protected boolean isMouseOverTab(CreativeTabs tab, int mouseX, int mouseY)`
- `protected void keyTyped(char typedChar, int keyCode)`
- `protected void mouseClicked(int mouseX, int mouseY, int mouseButton)`
- `protected void mouseReleased(int mouseX, int mouseY, int state)`
- `void onGuiClosed()`
- `protected boolean renderCreativeInventoryHoveringText(CreativeTabs tab, int mouseX, int mouseY)`
- `protected void renderToolTip(ItemStack stack, int x, int y)`
- `protected void updateActivePotionEffects()`
- `void updateScreen()`

## Fields

- `GuiContainerCreative`
